# academic_system

./: .env.dev  .pre-commit-config.yaml  README.md  docker-compose.yml  logs-celery.txt  mypy.ini  pyproject.toml
config/: celery.py  settings.py  urls.py
docker/: Dockerfile  docker-compose.yml
enrollments/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
enrollments/management/commands/: seed_enrollments.py
enrollments/migrations/: 0001_initial.py  0002_enrollment_status.py  0003_remove_enrollment_status_enrollment_error_message_and_more.py  0004_enrollment_status_alter_enrollmentbatch_status.py
students/: admin.py  models.py
students/migrations/: 0001_initial.py
